# rust-kotlin-interop-example

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
src/nativeMain/kotlin/: main.kt
untitled/: .gitignore  Cargo.toml  build.rs
untitled/src/: bindings.rs  lib.rs
